Use gi_cclosure_marshal_generic instead of duplicating it.

Bump gobject-introspection dependency to ensure that we have the corresponding
changes in g-i.

https://bugzilla.gnome.org/show_bug.cgi?id=668903

Signed-off-by: Michel Dänzer <michel@daenzer.net>
Signed-off-by: Martin Pitt <martin.pitt@ubuntu.com>